--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 
 <head>
         <link rel="stylesheet" href="style.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <script src="jquery.zoomooz.min.js"></script>
+        <script src="jquery.zoomooz.js"></script>
         </head>
 
 
@@ -10,16 +13,18 @@
 
      
 
-
 <body>
 
-        <div class="zoomTarget squareone"data-closeclick='true';>This element zooms when clicked on.</div>
+        <div class="zoomTarget" id="hwajin" data-closeclick='true' data-targetsize="0.45">화진<br>hwa-jin</div>
+        <div class="zoomTarget" id="everyday" data-closeclick='true' data-debug="true"data-targetsize="1.1";><img src="poster.png" style="height:50%;"></div></div>
+        <div class="zoomTarget" id="wholepicture" data-closeclick='true' data-debug="true"data-targetsize="0.45"></div>
+        
+
 
         </body>
 
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-        <script src="jquery.zoomooz.min.js"></script>
+
 
 
        </html>
