--- a/index.html
+++ b/index.html
@@ -109,7 +109,14 @@ $(document).click(function(){
         </div></div>
  
 
-
+        <div class="zoomTarget button" id="everyday" data-closeclick='false' data-debug="true"data-targetsize="1.1"; onclick="toggle_visibility('foo');"><img src="poster.png" style="width:100px;"></div></div>
+        <div class="dropdown">
+        <ul>
+                <li>aaaaaaaaaaa</li>
+                <li>aaaaaaaaaaa</li>
+                <li>aaaaaaaaaaa</li>
+        </ul>
+        </div>
 <!--
 
 <div id="myDIV">hide</div>
