--- a/index.html
+++ b/index.html
@@ -76,7 +76,14 @@ $(document).click(function(){
 
 
         
-
+    <div class="button"></div>
+    <div class="dropdown">
+    <ul>
+            <li>aaaaaaaaaaa</li>
+            <li>aaaaaaaaaaa</li>
+            <li>aaaaaaaaaaa</li>
+    </ul>
+    </div>
 <!--
         <a href="#" onclick="toggle_visibility('foo');">Click here to toggle visibility of element #foo</a>
         <div id="foo">This is foo</div> -->
@@ -109,14 +116,7 @@ $(document).click(function(){
         </div></div>
  
 
-        <div class="zoomTarget button" id="everyday" data-closeclick='false' data-debug="true"data-targetsize="1.1"; onclick="toggle_visibility('foo');"><img src="poster.png" style="width:100px;"></div></div>
-        <div class="dropdown">
-        <ul>
-                <li>aaaaaaaaaaa</li>
-                <li>aaaaaaaaaaa</li>
-                <li>aaaaaaaaaaa</li>
-        </ul>
-        </div>
+
 <!--
 
 <div id="myDIV">hide</div>
